--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Globalika/vendor/spdlog"]
 	path = Globalika/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Globalika/vendor/GLFW"]
+	path = Globalika/vendor/GLFW
+	url = https://github.com/Globalika/glfw
