--- a/Globalika/Globalika.vcxproj
+++ b/Globalika/Globalika.vcxproj
@@ -158,11 +158,13 @@
     <ClInclude Include="src\Globalika\Events\KeyEvent.h" />
     <ClInclude Include="src\Globalika\Events\MouseEvent.h" />
     <ClInclude Include="src\Globalika\ImGui\ImGuiLayer.h" />
+    <ClInclude Include="src\Globalika\Input.h" />
     <ClInclude Include="src\Globalika\Layer.h" />
     <ClInclude Include="src\Globalika\LayerStack.h" />
     <ClInclude Include="src\Globalika\Log.h" />
     <ClInclude Include="src\Globalika\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h" />
+    <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\globpch.h" />
   </ItemGroup>
@@ -173,6 +175,7 @@
     <ClCompile Include="src\Globalika\LayerStack.cpp" />
     <ClCompile Include="src\Globalika\Log.cpp" />
     <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\globpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
