--- a/Globalika/Globalika.vcxproj.filters
+++ b/Globalika/Globalika.vcxproj.filters
@@ -93,9 +93,6 @@
     <ClInclude Include="src\Globalika\Window.h">
       <Filter>src\Globalika</Filter>
     </ClInclude>
-    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
-      <Filter>src\Platform\OpenGL</Filter>
-    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
     </ClInclude>
@@ -1346,9 +1343,6 @@
     <ClCompile Include="src\Globalika\Log.cpp">
       <Filter>src\Globalika</Filter>
     </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
-      <Filter>src\Platform\OpenGL</Filter>
-    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
@@ -1358,5 +1352,6 @@
     <ClCompile Include="src\globpch.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Globalika\ImGui\ImGuiBuild.cpp" />
   </ItemGroup>
 </Project>
